gitignore setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,8 +11,8 @@ project_urls =
     Bug Tracker = https://github.com/qkzk/qcm_parser/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: GNU PUBLIC LICENSE
-    OPERATING SYSTEM :: OS INDEPENDENT
+    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
+    Operating System :: OS Independent
 
 [OPTIONS]
 PACKAGE_DIR =
